attempt to fix scroll on mobile

--- a/client/src/style/Root.css
+++ b/client/src/style/Root.css
@@ -228,6 +228,7 @@
   padding: 0 10%;
   height: calc(100vh - 98px);
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
   margin: auto;
 }
 
